theme/src/styles/main.sass
$content-width: 800px
@import 'colors'
$font-family-sans-serif: 'Source Sans Pro', sans-serif
@import '../../node_modules/bootstrap/scss/bootstrap'
@import '../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fontawesome.css'
@import '../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-solid.css'
@import 'investigation_list'
@import 'formresponse_details'
@import 'formresponse_list'
@import 'forms_list'
@import 'cnr-carbon'


@font-face
  font-family: 'Source Sans Pro'
  font-style: normal
  src: local('Source Sans Pro Regular'), url('~source-sans-pro/WOFF/OTF/SourceSansPro-Regular.otf.woff') format('woff')


@font-face
  font-family: 'Source Sans Pro Bold'
  font-style: normal
  src: local('Source Sans Pro Bold'), url('~source-sans-pro/WOFF/OTF/SourceSansPro-Bold.otf.woff') format('woff')


body
  font-family: 'Source Sans Pro', sans-serif
  margin: 0
  background-color: #f5f5f5

h1, h2, h3
  font-family: 'Source Sans Pro Bold', sans-serif

html
  box-sizing: border-box

*, *:before, *:after
  box-sizing: inherit

.cnr--header
  padding: 4em 40px 3em 40px
  background: white

.main-content-padded
  padding: 0 40px 40px 40px
  background: white

.content-block
  padding: 40px
  margin: 40px auto
  background: white

.cnr--user-menu
  width: auto !important
  height: auto !important
  color: white
  display: flex
  align-items: center

  svg
    margin-right: 5px
    fill: white

.cnr--link-button
  font-size: .8em

  &:hover
    color: $ui-01
    text-decoration: none



body
  display: flex
  justify-content: center
  flex-wrap: wrap

  .breadcrumbs
    margin-bottom: 2em

  header
    background-color: $blue
    width: 100%
    min-height: 400px

    nav
      width: 100%
      margin-top: 2em

      .wrapper
        max-width: $content-width
        margin: 0 auto
        display: flex
        justify-content: space-between
        align-items: center
        padding: 0 1em

      ul
        display: inline-grid
        a, a:visited
          color: white
          text-decoration: none

    .headerlogo
      background-image: url('../assets/images/logo.svg')
      width: 150px
      height: 48px
      display: block
      background-size: cover


  main
    margin-top: -200px
    width: $content-width
    max-width: $content-width

    p
      font-size: 14px
      line-height: 24px

    .description
      max-width: 400px
      margin: 16px auto 38px auto
      text-align: center

    h3
      font-size: 18px
      line-height: 24px
      font-weight: normal

  footer
    width: 100%
    margin-top: 2em
    margin-bottom: 5em
    font-size: 14px
    color: gray

    a, a:visited
      color: gray
      text-decoration: none

    ul
      max-width: $content-width
      margin: 1em auto 0

      li
        margin-right: 2em

.bx--inline-notification__title
  color: #e0182d

